best_try_and_best_chance

--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -81,7 +81,7 @@
 <section id="outline-container-org9c19a34" class="outline-2">
 <h2 id="org9c19a34"><span class="section-number-2">2.</span> 结果</h2>
 <div class="outline-text-2" id="text-2">
-<table>
+<table id="org71e24e9">
 
 
 <colgroup>
@@ -508,9 +508,482 @@
 <li>2023-10-30, 创建类 Device，描述设备的基本信息并添加基本控制</li>
 <li>2023-12-28, 使用控制台实现点名的功能。[列出所有名字 - 喊名字 - 回车 - 下一个名字 - 循环 - 点名结束]</li>
 </ul>
+
+
+<p>
+期末考试成绩 (2024-01-15):
+</p>
+<table>
+
+
+<colgroup>
+<col  class="org-right">
+
+<col  class="org-left">
+
+<col  class="org-right">
+
+<col  class="org-right">
+
+<col  class="org-right">
+
+<col  class="org-right">
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-right">No</th>
+<th scope="col" class="org-left">Name</th>
+<th scope="col" class="org-right">Test1</th>
+<th scope="col" class="org-right">Test2</th>
+<th scope="col" class="org-right">Test3</th>
+<th scope="col" class="org-right">Final</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">甘成杰</td>
+<td class="org-right">99</td>
+<td class="org-right">100</td>
+<td class="org-right">100</td>
+<td class="org-right">100</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">刘鹏</td>
+<td class="org-right">100</td>
+<td class="org-right">94</td>
+<td class="org-right">97</td>
+<td class="org-right">97</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">吴淑豪</td>
+<td class="org-right">95</td>
+<td class="org-right">98</td>
+<td class="org-right">94</td>
+<td class="org-right">96</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">官名福</td>
+<td class="org-right">86</td>
+<td class="org-right">89</td>
+<td class="org-right">99</td>
+<td class="org-right">91</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">林俊贤</td>
+<td class="org-right">91</td>
+<td class="org-right">79</td>
+<td class="org-right">95</td>
+<td class="org-right">88</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">刘天宇</td>
+<td class="org-right">69</td>
+<td class="org-right">99</td>
+<td class="org-right">96</td>
+<td class="org-right">88</td>
+</tr>
+
+<tr>
+<td class="org-right">7</td>
+<td class="org-left">江金涛</td>
+<td class="org-right">72</td>
+<td class="org-right">96</td>
+<td class="org-right">93</td>
+<td class="org-right">87</td>
+</tr>
+
+<tr>
+<td class="org-right">8</td>
+<td class="org-left">肖毅良</td>
+<td class="org-right">77</td>
+<td class="org-right">72</td>
+<td class="org-right">98</td>
+<td class="org-right">82</td>
+</tr>
+
+<tr>
+<td class="org-right">9</td>
+<td class="org-left">邓义柏</td>
+<td class="org-right">93</td>
+<td class="org-right">91</td>
+<td class="org-right">60</td>
+<td class="org-right">81</td>
+</tr>
+
+<tr>
+<td class="org-right">10</td>
+<td class="org-left">刘金麓</td>
+<td class="org-right">94</td>
+<td class="org-right">87</td>
+<td class="org-right">60</td>
+<td class="org-right">80</td>
+</tr>
+
+<tr>
+<td class="org-right">11</td>
+<td class="org-left">黄锡东</td>
+<td class="org-right">90</td>
+<td class="org-right">88</td>
+<td class="org-right">60</td>
+<td class="org-right">79</td>
+</tr>
+
+<tr>
+<td class="org-right">12</td>
+<td class="org-left">李毅</td>
+<td class="org-right">89</td>
+<td class="org-right">82</td>
+<td class="org-right">60</td>
+<td class="org-right">77</td>
+</tr>
+
+<tr>
+<td class="org-right">13</td>
+<td class="org-left">陈宇川</td>
+<td class="org-right">85</td>
+<td class="org-right">85</td>
+<td class="org-right">60</td>
+<td class="org-right">77</td>
+</tr>
+
+<tr>
+<td class="org-right">14</td>
+<td class="org-left">江坤涛</td>
+<td class="org-right">97</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">76</td>
+</tr>
+
+<tr>
+<td class="org-right">15</td>
+<td class="org-left">杨富</td>
+<td class="org-right">98</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">76</td>
+</tr>
+
+<tr>
+<td class="org-right">16</td>
+<td class="org-left">梁炽勇</td>
+<td class="org-right">92</td>
+<td class="org-right">77</td>
+<td class="org-right">60</td>
+<td class="org-right">76</td>
+</tr>
+
+<tr>
+<td class="org-right">17</td>
+<td class="org-left">李进斌</td>
+<td class="org-right">88</td>
+<td class="org-right">80</td>
+<td class="org-right">60</td>
+<td class="org-right">76</td>
+</tr>
+
+<tr>
+<td class="org-right">18</td>
+<td class="org-left">程春平</td>
+<td class="org-right">96</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">19</td>
+<td class="org-left">杨耀嘉</td>
+<td class="org-right">87</td>
+<td class="org-right">78</td>
+<td class="org-right">60</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">20</td>
+<td class="org-left">王艺楠</td>
+<td class="org-right">81</td>
+<td class="org-right">83</td>
+<td class="org-right">60</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">21</td>
+<td class="org-left">盘泽强</td>
+<td class="org-right">80</td>
+<td class="org-right">86</td>
+<td class="org-right">60</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">22</td>
+<td class="org-left">王俊杰</td>
+<td class="org-right">74</td>
+<td class="org-right">92</td>
+<td class="org-right">60</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">23</td>
+<td class="org-left">陈翕</td>
+<td class="org-right">71</td>
+<td class="org-right">95</td>
+<td class="org-right">60</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">24</td>
+<td class="org-left">吴嘉城</td>
+<td class="org-right">68</td>
+<td class="org-right">97</td>
+<td class="org-right">60</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">25</td>
+<td class="org-left">曾翔</td>
+<td class="org-right">73</td>
+<td class="org-right">90</td>
+<td class="org-right">60</td>
+<td class="org-right">74</td>
+</tr>
+
+<tr>
+<td class="org-right">26</td>
+<td class="org-left">黄军帮</td>
+<td class="org-right">70</td>
+<td class="org-right">93</td>
+<td class="org-right">60</td>
+<td class="org-right">74</td>
+</tr>
+
+<tr>
+<td class="org-right">27</td>
+<td class="org-left">杜喆</td>
+<td class="org-right">84</td>
+<td class="org-right">75</td>
+<td class="org-right">60</td>
+<td class="org-right">73</td>
+</tr>
+
+<tr>
+<td class="org-right">28</td>
+<td class="org-left">李德致</td>
+<td class="org-right">79</td>
+<td class="org-right">81</td>
+<td class="org-right">60</td>
+<td class="org-right">73</td>
+</tr>
+
+<tr>
+<td class="org-right">29</td>
+<td class="org-left">罗秀洋</td>
+<td class="org-right">82</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">71</td>
+</tr>
+
+<tr>
+<td class="org-right">30</td>
+<td class="org-left">黄颜徽</td>
+<td class="org-right">83</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">71</td>
+</tr>
+
+<tr>
+<td class="org-right">31</td>
+<td class="org-left">曾宏燊</td>
+<td class="org-right">70</td>
+<td class="org-right">84</td>
+<td class="org-right">60</td>
+<td class="org-right">71</td>
+</tr>
+
+<tr>
+<td class="org-right">32</td>
+<td class="org-left">张明达</td>
+<td class="org-right">76</td>
+<td class="org-right">74</td>
+<td class="org-right">60</td>
+<td class="org-right">70</td>
+</tr>
+
+<tr>
+<td class="org-right">33</td>
+<td class="org-left">王上标</td>
+<td class="org-right">78</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">69</td>
+</tr>
+
+<tr>
+<td class="org-right">34</td>
+<td class="org-left">周远龙</td>
+<td class="org-right">75</td>
+<td class="org-right">73</td>
+<td class="org-right">60</td>
+<td class="org-right">69</td>
+</tr>
+
+<tr>
+<td class="org-right">35</td>
+<td class="org-left">符文财</td>
+<td class="org-right">70</td>
+<td class="org-right">76</td>
+<td class="org-right">60</td>
+<td class="org-right">69</td>
+</tr>
+
+<tr>
+<td class="org-right">36</td>
+<td class="org-left">韦代帅</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">37</td>
+<td class="org-left">谢鹤鸣</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">38</td>
+<td class="org-left">邓炜祺</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">39</td>
+<td class="org-left">郭小龙</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">40</td>
+<td class="org-left">刘仁杰</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">41</td>
+<td class="org-left">左亮</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">42</td>
+<td class="org-left">车斌涛</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">43</td>
+<td class="org-left">周枫</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">44</td>
+<td class="org-left">何锦晖</td>
+<td class="org-right">70</td>
+<td class="org-right">71</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">45</td>
+<td class="org-left">夏志豪</td>
+<td class="org-right">67</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">66</td>
+</tr>
+
+<tr>
+<td class="org-right">46</td>
+<td class="org-left">林显诚</td>
+<td class="org-right">66</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">65</td>
+</tr>
+
+<tr>
+<td class="org-right">47</td>
+<td class="org-left">肖峰</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+<td class="org-right">63</td>
+</tr>
+
+<tr>
+<td class="org-right">48</td>
+<td class="org-left">魏坤</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+<td class="org-right">63</td>
+</tr>
+
+<tr>
+<td class="org-right">49</td>
+<td class="org-left">黄萧</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+<td class="org-right">63</td>
+</tr>
+</tbody>
+</table>
 </div>
 </section>
-
 
 <section id="outline-container-org67e0fef" class="outline-2">
 <h2 id="org67e0fef"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
