best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -24,6 +24,7 @@
 <ul>
 <li><a href="#orge8f2dac">1. 班级信息</a></li>
 <li><a href="#org1857a2d">2. 测验</a></li>
+<li><a href="#orgeaebb05">3. 寒假作业 (2024-01-15)</a></li>
 </ul>
 </div>
 </nav>
@@ -515,6 +516,26 @@
 </tr>
 </tbody>
 </table>
+</div>
+</section>
+
+
+
+<section id="outline-container-orgeaebb05" class="outline-2">
+<h2 id="orgeaebb05"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+完成题目图示的题目:
+<img src="img/191.png" alt="191.png">
+</p>
+
+<p>
+补充:
+</p>
+<ul class="org-ul">
+<li>其中第 3 题的进阶题目是：请用循环的方式，输出 99 乘法表。有兴趣的同学请尝试</li>
+<li>请大家酌情预习 Winform 相关内容</li>
+</ul>
 </div>
 </section>
 </div>
