best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -526,7 +526,7 @@
 <div class="outline-text-2" id="text-3">
 <p>
 完成题目图示的题目:
-<img src="img/191.png" alt="191.png">
+<img src="img/191-3338282.png" alt="191-3338282.png">
 </p>
 
 <p>
