best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -525,7 +525,7 @@
 <h2 id="orgeaebb05"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
 <div class="outline-text-2" id="text-3">
 <p>
-完成题目图示的题目:
+完成下面图示的题目:
 <img src="img/191-3338282.png" alt="191-3338282.png">
 </p>
 
