best_try_and_best_chance

--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -526,8 +526,13 @@
 <div class="outline-text-2" id="text-3">
 <p>
 完成下面图示的题目:
-<img src="img/191-3338282.png" alt="191-3338282.png">
 </p>
+
+
+<figure id="orga3d5691">
+<img src="img/191-3338282.png" alt="191-3338282.png">
+
+</figure>
 
 <p>
 补充:
