--- a/html/ccc/reports_192.html
+++ b/html/ccc/reports_192.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-01-15 -->
+<!-- 2024-01-16 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 192</title>
@@ -24,6 +24,7 @@
 <ul>
 <li><a href="#orgd521cff">1. 班级信息</a></li>
 <li><a href="#orgfb8bc52">2. 测验结果</a></li>
+<li><a href="#org74b32ce">3. 寒假作业 (2024-01-16)</a></li>
 </ul>
 </div>
 </nav>
@@ -41,7 +42,7 @@
 <section id="outline-container-orgfb8bc52" class="outline-2">
 <h2 id="orgfb8bc52"><span class="section-number-2">2.</span> 测验结果</h2>
 <div class="outline-text-2" id="text-2">
-<table>
+<table id="org4d652f7">
 
 
 <colgroup>
@@ -411,8 +412,6 @@
 </tbody>
 </table>
 
-
-
 <p>
 任务详情:
 </p>
@@ -421,12 +420,454 @@
 <li>2023-10-31, 创建类 PLC，描述设备的基本信息并添加基本控制</li>
 <li>2023-12-26, 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方</li>
 </ul>
+
+<div class="org-src-container">
+<pre class="src src-elisp"><span style="color: #000000;">(</span><span style="color: #5317ac;">cl-loop</span> for i in tb
+         for f1 = <span style="color: #a8007f;">(</span><span style="color: #5317ac;">let</span> <span style="color: #005f88;">(</span><span style="color: #904200;">(</span>f <span style="color: #7f10d0;">(</span>nth 2 i<span style="color: #7f10d0;">)</span><span style="color: #904200;">)</span><span style="color: #005f88;">)</span> <span style="color: #005f88;">(</span><span style="color: #5317ac;">if</span> <span style="color: #904200;">(</span>numberp f<span style="color: #904200;">)</span> <span style="color: #904200;">(</span>- 101 f<span style="color: #904200;">)</span> <span style="color: #904200;">(</span><span style="color: #5317ac;">if</span> <span style="color: #7f10d0;">(</span>&gt; <span style="color: #006800;">(</span>length f<span style="color: #006800;">)</span> 0<span style="color: #7f10d0;">)</span> 70 70<span style="color: #904200;">)</span><span style="color: #005f88;">)</span><span style="color: #a8007f;">)</span>
+         for f2 = <span style="color: #a8007f;">(</span><span style="color: #5317ac;">let</span> <span style="color: #005f88;">(</span><span style="color: #904200;">(</span>f <span style="color: #7f10d0;">(</span>nth 3 i<span style="color: #7f10d0;">)</span><span style="color: #904200;">)</span><span style="color: #005f88;">)</span> <span style="color: #005f88;">(</span><span style="color: #5317ac;">if</span> <span style="color: #904200;">(</span>numberp f<span style="color: #904200;">)</span> <span style="color: #904200;">(</span>- 101 f<span style="color: #904200;">)</span> <span style="color: #904200;">(</span><span style="color: #5317ac;">if</span> <span style="color: #7f10d0;">(</span>&gt; <span style="color: #006800;">(</span>length f<span style="color: #006800;">)</span> 0<span style="color: #7f10d0;">)</span> 70 60<span style="color: #904200;">)</span><span style="color: #005f88;">)</span><span style="color: #a8007f;">)</span>
+         for f3 = <span style="color: #a8007f;">(</span><span style="color: #5317ac;">let</span> <span style="color: #005f88;">(</span><span style="color: #904200;">(</span>f <span style="color: #7f10d0;">(</span>nth 4 i<span style="color: #7f10d0;">)</span><span style="color: #904200;">)</span><span style="color: #005f88;">)</span> <span style="color: #005f88;">(</span><span style="color: #5317ac;">if</span> <span style="color: #904200;">(</span>numberp f<span style="color: #904200;">)</span> <span style="color: #904200;">(</span>- 101 f<span style="color: #904200;">)</span> <span style="color: #904200;">(</span><span style="color: #5317ac;">if</span> <span style="color: #7f10d0;">(</span>&gt; <span style="color: #006800;">(</span>length f<span style="color: #006800;">)</span> 0<span style="color: #7f10d0;">)</span> 70 60<span style="color: #904200;">)</span><span style="color: #005f88;">)</span><span style="color: #a8007f;">)</span>
+         collect <span style="color: #a8007f;">(</span>list 0 <span style="color: #005f88;">(</span>nth 1 i<span style="color: #005f88;">)</span> f1 f2 f3 <span style="color: #005f88;">(</span>round <span style="color: #904200;">(</span>/ <span style="color: #7f10d0;">(</span>+ f1 f2 f3<span style="color: #7f10d0;">)</span> 3.0<span style="color: #904200;">)</span><span style="color: #005f88;">)</span><span style="color: #a8007f;">)</span><span style="color: #000000;">)</span>
+</pre>
+</div>
+
+<p>
+期末考试成绩 (2024-01-16):
+</p>
+<table>
+
+
+<colgroup>
+<col  class="org-right">
+
+<col  class="org-left">
+
+<col  class="org-right">
+
+<col  class="org-right">
+
+<col  class="org-right">
+
+<col  class="org-right">
+</colgroup>
+<thead>
+<tr>
+<th scope="col" class="org-right">名次</th>
+<th scope="col" class="org-left">名字</th>
+<th scope="col" class="org-right">Test1</th>
+<th scope="col" class="org-right">Test2</th>
+<th scope="col" class="org-right">Test3</th>
+<th scope="col" class="org-right">Final</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td class="org-right">1</td>
+<td class="org-left">段文潇</td>
+<td class="org-right">99</td>
+<td class="org-right">100</td>
+<td class="org-right">99</td>
+<td class="org-right">99</td>
+</tr>
+
+<tr>
+<td class="org-right">2</td>
+<td class="org-left">李吉</td>
+<td class="org-right">100</td>
+<td class="org-right">89</td>
+<td class="org-right">100</td>
+<td class="org-right">96</td>
+</tr>
+
+<tr>
+<td class="org-right">3</td>
+<td class="org-left">许焕圣</td>
+<td class="org-right">94</td>
+<td class="org-right">95</td>
+<td class="org-right">97</td>
+<td class="org-right">95</td>
+</tr>
+
+<tr>
+<td class="org-right">4</td>
+<td class="org-left">高旻昱</td>
+<td class="org-right">96</td>
+<td class="org-right">97</td>
+<td class="org-right">93</td>
+<td class="org-right">95</td>
+</tr>
+
+<tr>
+<td class="org-right">5</td>
+<td class="org-left">古远东</td>
+<td class="org-right">83</td>
+<td class="org-right">93</td>
+<td class="org-right">96</td>
+<td class="org-right">91</td>
+</tr>
+
+<tr>
+<td class="org-right">6</td>
+<td class="org-left">肖义珥</td>
+<td class="org-right">91</td>
+<td class="org-right">90</td>
+<td class="org-right">92</td>
+<td class="org-right">91</td>
+</tr>
+
+<tr>
+<td class="org-right">7</td>
+<td class="org-left">何华为</td>
+<td class="org-right">93</td>
+<td class="org-right">94</td>
+<td class="org-right">87</td>
+<td class="org-right">91</td>
+</tr>
+
+<tr>
+<td class="org-right">8</td>
+<td class="org-left">刘广鸿</td>
+<td class="org-right">90</td>
+<td class="org-right">98</td>
+<td class="org-right">86</td>
+<td class="org-right">91</td>
+</tr>
+
+<tr>
+<td class="org-right">9</td>
+<td class="org-left">黄可彬</td>
+<td class="org-right">82</td>
+<td class="org-right">92</td>
+<td class="org-right">95</td>
+<td class="org-right">90</td>
+</tr>
+
+<tr>
+<td class="org-right">10</td>
+<td class="org-left">张甘霖</td>
+<td class="org-right">86</td>
+<td class="org-right">96</td>
+<td class="org-right">79</td>
+<td class="org-right">87</td>
+</tr>
+
+<tr>
+<td class="org-right">11</td>
+<td class="org-left">余海中</td>
+<td class="org-right">98</td>
+<td class="org-right">84</td>
+<td class="org-right">78</td>
+<td class="org-right">87</td>
+</tr>
+
+<tr>
+<td class="org-right">12</td>
+<td class="org-left">谭鑫</td>
+<td class="org-right">97</td>
+<td class="org-right">88</td>
+<td class="org-right">77</td>
+<td class="org-right">87</td>
+</tr>
+
+<tr>
+<td class="org-right">13</td>
+<td class="org-left">段京文</td>
+<td class="org-right">84</td>
+<td class="org-right">83</td>
+<td class="org-right">91</td>
+<td class="org-right">86</td>
+</tr>
+
+<tr>
+<td class="org-right">14</td>
+<td class="org-left">黄飞超</td>
+<td class="org-right">70</td>
+<td class="org-right">87</td>
+<td class="org-right">98</td>
+<td class="org-right">85</td>
+</tr>
+
+<tr>
+<td class="org-right">15</td>
+<td class="org-left">段文锋</td>
+<td class="org-right">88</td>
+<td class="org-right">99</td>
+<td class="org-right">67</td>
+<td class="org-right">85</td>
+</tr>
+
+<tr>
+<td class="org-right">16</td>
+<td class="org-left">刘虹佑</td>
+<td class="org-right">87</td>
+<td class="org-right">70</td>
+<td class="org-right">89</td>
+<td class="org-right">82</td>
+</tr>
+
+<tr>
+<td class="org-right">17</td>
+<td class="org-left">李泽俊</td>
+<td class="org-right">70</td>
+<td class="org-right">86</td>
+<td class="org-right">84</td>
+<td class="org-right">80</td>
+</tr>
+
+<tr>
+<td class="org-right">18</td>
+<td class="org-left">麦天河</td>
+<td class="org-right">95</td>
+<td class="org-right">70</td>
+<td class="org-right">75</td>
+<td class="org-right">80</td>
+</tr>
+
+<tr>
+<td class="org-right">19</td>
+<td class="org-left">韦金良</td>
+<td class="org-right">70</td>
+<td class="org-right">85</td>
+<td class="org-right">83</td>
+<td class="org-right">79</td>
+</tr>
+
+<tr>
+<td class="org-right">20</td>
+<td class="org-left">贝俊霖</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">94</td>
+<td class="org-right">78</td>
+</tr>
+
+<tr>
+<td class="org-right">21</td>
+<td class="org-left">陈颖聪</td>
+<td class="org-right">70</td>
+<td class="org-right">91</td>
+<td class="org-right">72</td>
+<td class="org-right">78</td>
+</tr>
+
+<tr>
+<td class="org-right">22</td>
+<td class="org-left">郭榕荣</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">90</td>
+<td class="org-right">77</td>
+</tr>
+
+<tr>
+<td class="org-right">23</td>
+<td class="org-left">梁泽文</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">88</td>
+<td class="org-right">76</td>
+</tr>
+
+<tr>
+<td class="org-right">24</td>
+<td class="org-left">李耀武</td>
+<td class="org-right">70</td>
+<td class="org-right">80</td>
+<td class="org-right">76</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">25</td>
+<td class="org-left">王海波</td>
+<td class="org-right">92</td>
+<td class="org-right">60</td>
+<td class="org-right">73</td>
+<td class="org-right">75</td>
+</tr>
+
+<tr>
+<td class="org-right">26</td>
+<td class="org-left">陈梓鑫</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">81</td>
+<td class="org-right">74</td>
+</tr>
+
+<tr>
+<td class="org-right">27</td>
+<td class="org-left">吴幸林</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">85</td>
+<td class="org-right">72</td>
+</tr>
+
+<tr>
+<td class="org-right">28</td>
+<td class="org-left">张桂毓</td>
+<td class="org-right">70</td>
+<td class="org-right">82</td>
+<td class="org-right">63</td>
+<td class="org-right">72</td>
+</tr>
+
+<tr>
+<td class="org-right">29</td>
+<td class="org-left">苏大明</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">82</td>
+<td class="org-right">71</td>
+</tr>
+
+<tr>
+<td class="org-right">30</td>
+<td class="org-left">唐景富</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">74</td>
+<td class="org-right">71</td>
+</tr>
+
+<tr>
+<td class="org-right">31</td>
+<td class="org-left">刘翔</td>
+<td class="org-right">89</td>
+<td class="org-right">60</td>
+<td class="org-right">65</td>
+<td class="org-right">71</td>
+</tr>
+
+<tr>
+<td class="org-right">32</td>
+<td class="org-left">刘泽泉</td>
+<td class="org-right">70</td>
+<td class="org-right">81</td>
+<td class="org-right">62</td>
+<td class="org-right">71</td>
+</tr>
+
+<tr>
+<td class="org-right">33</td>
+<td class="org-left">叶宇</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">80</td>
+<td class="org-right">70</td>
+</tr>
+
+<tr>
+<td class="org-right">34</td>
+<td class="org-left">谢晓中</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">71</td>
+<td class="org-right">70</td>
+</tr>
+
+<tr>
+<td class="org-right">35</td>
+<td class="org-left">陆宇轩</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">66</td>
+<td class="org-right">69</td>
+</tr>
+
+<tr>
+<td class="org-right">36</td>
+<td class="org-left">李岳元</td>
+<td class="org-right">85</td>
+<td class="org-right">60</td>
+<td class="org-right">61</td>
+<td class="org-right">69</td>
+</tr>
+
+<tr>
+<td class="org-right">37</td>
+<td class="org-left">周永久</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">64</td>
+<td class="org-right">68</td>
+</tr>
+
+<tr>
+<td class="org-right">38</td>
+<td class="org-left">饶展源</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">71</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">39</td>
+<td class="org-left">何晓东</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">67</td>
+</tr>
+
+<tr>
+<td class="org-right">40</td>
+<td class="org-left">沈艺宏</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">69</td>
+<td class="org-right">66</td>
+</tr>
+
+<tr>
+<td class="org-right">41</td>
+<td class="org-left">薛进超</td>
+<td class="org-right">70</td>
+<td class="org-right">60</td>
+<td class="org-right">68</td>
+<td class="org-right">66</td>
+</tr>
+
+<tr>
+<td class="org-right">42</td>
+<td class="org-left">卢德涛</td>
+<td class="org-right">70</td>
+<td class="org-right">70</td>
+<td class="org-right">59</td>
+<td class="org-right">66</td>
+</tr>
+
+<tr>
+<td class="org-right">43</td>
+<td class="org-left">岑法政</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+<td class="org-right">60</td>
+</tr>
+</tbody>
+</table>
+</div>
+</section>
+
+
+<section id="outline-container-org74b32ce" class="outline-2">
+<h2 id="org74b32ce"><span class="section-number-2">3.</span> 寒假作业 (2024-01-16)</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+C/S架构编程，做完第一章所有的上机题:
+</p>
+<ul class="org-ul">
+<li>可选项，其他题也做</li>
+<li>如果任务不饱和，可酌情做一下第二章</li>
+</ul>
 </div>
 </section>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-01-15</p>
+<p class="date">Created: 2024-01-16</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
