--- a/html/dotnet/1-csharp.html
+++ b/html/dotnet/1-csharp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-01 -->
+<!-- 2024-03-04 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>C♯ 语言</title>
@@ -22,21 +22,21 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org7cf233b">1. 基本规则</a></li>
+<li><a href="#org982d823">1. 基本规则</a></li>
 </ul>
 </div>
 </nav>
 
 
-<section id="outline-container-org7cf233b" class="outline-2">
-<h2 id="org7cf233b"><span class="section-number-2">1.</span> 基本规则</h2>
+<section id="outline-container-org982d823" class="outline-2">
+<h2 id="org982d823"><span class="section-number-2">1.</span> 基本规则</h2>
 <div class="outline-text-2" id="text-1">
 <p>
 人有人的语言，电脑有电脑的语言。连接两者的是 <b>编译器</b> 。
 </p>
 
 
-<figure id="orgd9845b6">
+<figure id="org3724a0d">
 <img src="img/01-hello-compile.png" alt="01-hello-compile.png" width="600px">
 
 </figure>
@@ -68,7 +68,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-03-01</p>
+<p class="date">Created: 2024-03-04</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
