--- a/html/ccc/reports_191.html
+++ b/html/ccc/reports_191.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-01 -->
+<!-- 2024-03-04 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Report of 191</title>
@@ -22,15 +22,15 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge8f2dac">1. 班级信息</a></li>
-<li><a href="#org1857a2d">2. 测验</a></li>
-<li><a href="#orgeaebb05">3. 寒假作业 (2024-01-15)</a></li>
-<li><a href="#org23b41be">4. 题库</a>
+<li><a href="#orgc13a498">1. 班级信息</a></li>
+<li><a href="#orgf8000da">2. 测验</a></li>
+<li><a href="#org12cfad4">3. 寒假作业 (2024-01-15)</a></li>
+<li><a href="#orgdcdd06c">4. 题库</a>
 <ul>
-<li><a href="#orgb1ceed2">4.1. 打印从 1 到 1000 的所有数</a></li>
-<li><a href="#orged7e26c">4.2. 求取从 1 到 1000 的所有数的和</a></li>
-<li><a href="#org91d5f01">4.3. 求取从 1 到 1000 的所有数的平均数</a></li>
-<li><a href="#org2649373">4.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
+<li><a href="#org32d8995">4.1. 打印从 1 到 1000 的所有数</a></li>
+<li><a href="#orga0e88dc">4.2. 求取从 1 到 1000 的所有数的和</a></li>
+<li><a href="#orgff64662">4.3. 求取从 1 到 1000 的所有数的平均数</a></li>
+<li><a href="#org616f51d">4.4. 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</a></li>
 </ul>
 </li>
 </ul>
@@ -38,8 +38,8 @@
 </nav>
 
 
-<section id="outline-container-orge8f2dac" class="outline-2">
-<h2 id="orge8f2dac"><span class="section-number-2">1.</span> 班级信息</h2>
+<section id="outline-container-orgc13a498" class="outline-2">
+<h2 id="orgc13a498"><span class="section-number-2">1.</span> 班级信息</h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li>课代表: 曾凯</li>
@@ -47,10 +47,10 @@
 </div>
 </section>
 
-<section id="outline-container-org1857a2d" class="outline-2">
-<h2 id="org1857a2d"><span class="section-number-2">2.</span> 测验</h2>
+<section id="outline-container-orgf8000da" class="outline-2">
+<h2 id="orgf8000da"><span class="section-number-2">2.</span> 测验</h2>
 <div class="outline-text-2" id="text-2">
-<table id="orgff89ea7">
+<table id="org600fda8">
 
 
 <colgroup>
@@ -529,15 +529,15 @@
 
 
 
-<section id="outline-container-orgeaebb05" class="outline-2">
-<h2 id="orgeaebb05"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
+<section id="outline-container-org12cfad4" class="outline-2">
+<h2 id="org12cfad4"><span class="section-number-2">3.</span> 寒假作业 (2024-01-15)</h2>
 <div class="outline-text-2" id="text-3">
 <p>
 完成下面图示的题目:
 </p>
 
 
-<figure id="org30a134e">
+<figure id="org11b12f3">
 <img src="img/191-3338282.png" alt="191-3338282.png">
 
 </figure>
@@ -552,12 +552,12 @@
 </div>
 </section>
 
-<section id="outline-container-org23b41be" class="outline-2">
-<h2 id="org23b41be"><span class="section-number-2">4.</span> 题库</h2>
+<section id="outline-container-orgdcdd06c" class="outline-2">
+<h2 id="orgdcdd06c"><span class="section-number-2">4.</span> 题库</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgb1ceed2" class="outline-3">
-<h3 id="orgb1ceed2"><span class="section-number-3">4.1.</span> 打印从 1 到 1000 的所有数</h3>
+<div id="outline-container-org32d8995" class="outline-3">
+<h3 id="org32d8995"><span class="section-number-3">4.1.</span> 打印从 1 到 1000 的所有数</h3>
 <div class="outline-text-3" id="text-4-1">
 <div class="org-src-container">
 <pre class="src src-csx"><span style="color: #5317ac;">for</span> <span style="color: #000000;">(</span><span style="color: #005a5f;">int</span> <span style="color: #00538b;">i</span> = 1; i &lt;= 1000; i++<span style="color: #000000;">)</span>
@@ -569,8 +569,8 @@
 </div>
 </div>
 
-<div id="outline-container-orged7e26c" class="outline-3">
-<h3 id="orged7e26c"><span class="section-number-3">4.2.</span> 求取从 1 到 1000 的所有数的和</h3>
+<div id="outline-container-orga0e88dc" class="outline-3">
+<h3 id="orga0e88dc"><span class="section-number-3">4.2.</span> 求取从 1 到 1000 的所有数的和</h3>
 <div class="outline-text-3" id="text-4-2">
 <div class="org-src-container">
 <pre class="src src-csx"><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
@@ -584,8 +584,8 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 </div>
 
-<div id="outline-container-org91d5f01" class="outline-3">
-<h3 id="org91d5f01"><span class="section-number-3">4.3.</span> 求取从 1 到 1000 的所有数的平均数</h3>
+<div id="outline-container-orgff64662" class="outline-3">
+<h3 id="orgff64662"><span class="section-number-3">4.3.</span> 求取从 1 到 1000 的所有数的平均数</h3>
 <div class="outline-text-3" id="text-4-3">
 <div class="org-src-container">
 <pre class="src src-csx"><span style="color: #005a5f;">int</span> <span style="color: #00538b;">sum</span> = 0;
@@ -604,8 +604,8 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 </div>
 
-<div id="outline-container-org2649373" class="outline-3">
-<h3 id="org2649373"><span class="section-number-3">4.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h3>
+<div id="outline-container-org616f51d" class="outline-3">
+<h3 id="org616f51d"><span class="section-number-3">4.4.</span> 求取 int[] numbers = {1,2,3,4,5,6,7,8,9,10} 的平均值</h3>
 <div class="outline-text-3" id="text-4-4">
 <div class="org-src-container">
 <pre class="src src-csx"><span style="color: #005a5f;">int</span><span style="color: #000000;">[]</span> <span style="color: #00538b;">numbers</span> = <span style="color: #000000;">{</span>1, 2, 3, 4, 5, 6, 7, 8, 9, 10<span style="color: #000000;">}</span>;
@@ -629,7 +629,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-03-01</p>
+<p class="date">Created: 2024-03-04</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
