--- a/html/index.html
+++ b/html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-01 -->
+<!-- 2024-03-04 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>AIT.NET</title>
@@ -52,7 +52,7 @@
 </ul></li>
 <li>dotnet
 <ul class="org-ul">
-<li><a href="dotnet/1-csharp.html">1-csharp</a></li>
+<li><a href="dotnet/1-csharp.html">C♯ 语言</a></li>
 </ul></li>
 <li>skills
 <ul class="org-ul">
@@ -78,7 +78,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 1a2y</p>
-<p class="date">Created: 2024-03-01</p>
+<p class="date">Created: 2024-03-04</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
