--- a/html/ccc/reports_190.html
+++ b/html/ccc/reports_190.html
@@ -27,7 +27,7 @@
 <li><a href="#orgbaebb30">3. 寒假作业 (2024-01-15)</a></li>
 <li><a href="#org3cdc913">4. 练习题备忘</a>
 <ul>
-<li><a href="#orgf369da7">4.1. 求取 BMI 的值</a></li>
+<li><a href="#org0d7e7df">4.1. 实现一个求取 BMI 的值的控制台应用</a></li>
 </ul>
 </li>
 </ul>
@@ -1020,8 +1020,8 @@
 <h2 id="org3cdc913"><span class="section-number-2">4.</span> 练习题备忘</h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgf369da7" class="outline-3">
-<h3 id="orgf369da7"><span class="section-number-3">4.1.</span> 求取 BMI 的值</h3>
+<div id="outline-container-org0d7e7df" class="outline-3">
+<h3 id="org0d7e7df"><span class="section-number-3">4.1.</span> 实现一个求取 BMI 的值的控制台应用</h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 基本实现:
@@ -1052,7 +1052,7 @@
 </div>
 
 <p>
-进行完善 1) 增加身体状况的判断 2) 增加循环:
+进行完善 1) 输出身体状况 2) 循环计算:
 </p>
 <div class="org-src-container">
 <pre class="src src-csharp"><span style="color: #5317ac;">static</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Main</span><span style="color: #000000;">(</span><span style="color: #005a5f;">string</span><span style="color: #a8007f;">[]</span> <span style="color: #00538b;">args</span><span style="color: #000000;">)</span>
@@ -1066,6 +1066,7 @@
         <span style="color: #505050;">// </span><span style="color: #505050;">2) &#36890;&#36807; double.Parse &#26041;&#27861;&#21487;&#20197;&#23558;&#23383;&#31526;&#20018;&#36716;&#25442;&#20026; double &#31867;&#22411;</span>
         Console.<span style="color: #721045;">Write</span><span style="color: #005f88;">(</span><span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#24744;&#30340;&#36523;&#39640;&#65288;&#21333;&#20301;&#65306;&#31859;&#65289;: "</span><span style="color: #005f88;">)</span>;
         <span style="color: #005a5f;">double</span> <span style="color: #00538b;">shengao</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #005f88;">(</span>Console.<span style="color: #721045;">ReadLine</span><span style="color: #904200;">()</span><span style="color: #005f88;">)</span>;
+
         <span style="color: #505050;">// </span><span style="color: #505050;">&#33719;&#21462;&#20307;&#37325;:</span>
         Console.<span style="color: #721045;">Write</span><span style="color: #005f88;">(</span><span style="color: #2544bb;">"&#35831;&#36755;&#20837;&#24744;&#30340;&#20307;&#37325;&#65288;&#21333;&#20301;&#65306;&#21315;&#20811;&#65289;: "</span><span style="color: #005f88;">)</span>;
         <span style="color: #005a5f;">double</span> <span style="color: #00538b;">tizhong</span> = <span style="color: #005a5f;">double</span>.<span style="color: #721045;">Parse</span><span style="color: #005f88;">(</span>Console.<span style="color: #721045;">ReadLine</span><span style="color: #904200;">()</span><span style="color: #005f88;">)</span>;
@@ -1095,14 +1096,17 @@
         <span style="color: #005f88;">}</span>
 
         <span style="color: #505050;">// </span><span style="color: #505050;">&#36755;&#20986; BMI &#20197;&#21450;&#36523;&#20307;&#29366;&#20917;:</span>
-        <span style="color: #505050;">// </span><span style="color: #505050;">&#36890;&#36807;&#21464;&#37327;&#65292;&#23384;&#20648;&#20013;&#38388;&#25968;&#25454;</span>
-        <span style="color: #505050;">// </span><span style="color: #505050;">&#36890;&#36807;&#23383;&#31526;&#20018;&#25340;&#25509;+Console.WriteLine &#21453;&#39304;&#32473;&#29992;&#25143;</span>
+        <span style="color: #505050;">// </span><span style="color: #505050;">&#36890;&#36807;&#21464;&#37327;&#65292;&#23384;&#20648;&#20013;&#38388;&#25968;&#25454;; &#36890;&#36807;&#23383;&#31526;&#20018;&#25340;&#25509;+Console.WriteLine&#21453;&#39304;&#32473;&#29992;&#25143;</span>
         Console.<span style="color: #721045;">WriteLine</span><span style="color: #005f88;">(</span>$<span style="color: #2544bb;">"\n&#24744;&#30340;&#36523;&#39640;&#26159; {shengao}&#65292;&#24744;&#30340;&#20307;&#37325;&#26159; {tizhong}&#65292;&#24744;&#30340; Bmi &#20026; {bmi}"</span><span style="color: #005f88;">)</span>;
         Console.<span style="color: #721045;">WriteLine</span><span style="color: #005f88;">(</span>$<span style="color: #2544bb;">"&#24744;&#30340;&#36523;&#20307;&#29366;&#20917;&#20026;&#65306;&#12304;{shentizhuangkuang}&#12305;\n\n"</span><span style="color: #005f88;">)</span>;
     <span style="color: #a8007f;">}</span>
 <span style="color: #000000;">}</span>
 </pre>
 </div>
+
+<p>
+参考: <a href="https://cn.onlinebmicalculator.com/">https://cn.onlinebmicalculator.com/</a>
+</p>
 </div>
 </div>
 </section>
